# deepagents-printshop

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  LICENSE  README.md  SETUP.md  SYSTEM_DEPS.md  docker-compose.yml  llms.txt  pyproject.toml  requirements.txt  run_agent.py  run_agent.sh  run_llm_generator.py
.github/workflows/: ci.yml
agents/content_editor/: __init__.py  agent.py  content_reviewer.py  versioned_agent.py
agents/latex_specialist/: __init__.py  agent.py  latex_analyzer.py  latex_optimizer.py
agents/qa_orchestrator/: __init__.py  agent.py  langgraph_workflow.py  pipeline_types.py  quality_gates.py  workflow_coordinator.py
agents/research_agent/: __init__.py  agent.py  llm_report_generator.py  report_generator.py
agents/visual_qa/: __init__.py  agent.py
artifacts/output/: .gitkeep
artifacts/qa_reports/: milestone_4_demo_pipeline_report.json  milestone_4_demo_pipeline_summary.md
artifacts/sample_content/: conclusion.md  config.md  methodology.md
artifacts/sample_content/data/: model_performance.csv  training_metrics.csv
artifacts/sample_content/ieee_conference/: conclusion.md  config.md  experimental_setup.md  introduction.md  related_work.md  results.md  system_design.md
content_types/ieee_conference/: type.md
content_types/magazine/: type.md
content_types/research_report/: type.md
docs/pipeline-walkthrough/: PIPELINE_WALKTHROUGH.md
research_report/: latex_best_practices.md  optimization_patterns.md  table_figure_standards.md  typography_rules.md
tests/: conftest.py  test_langgraph_workflow.py  test_quality_gates.py
tools/: __init__.py  change_tracker.py  content_type_loader.py  graph_generator.py  latex_generator.py  llm_latex_generator.py  magazine_layout.py  pattern_injector.py  pattern_learner.py  pdf_compiler.py  version_manager.py  visual_qa.py  visual_qa_agent.py
(+29 files in other folders)
